--- a/index.html
+++ b/index.html
@@ -497,7 +497,22 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_2  et_pb_text_align_left et_pb_bg_layout_light">
 
 
-                                                <div class="et_pb_text_inner"><div class="key-shop-list"><div class="shop-module">
+                                                <div class="et_pb_text_inner">
+                                                    <div class="key-shop-list">
+
+                                                        <div class="shop-module">
+                                                            <div class="shop-content">
+                                                                <h2>Pipas</h2>
+                                                                <div class="shop-image">
+                                                                    <a href="https://www.herbalist.ml/shop/pipas/"><img src="https://www.herbalist.ml/img/icons/pipa-icon.jpg" alt="pipas" /></a>
+                                                                </div>
+                                                                <p>
+                                                                    Las pipas de vidrio son la forma más práctica y rápida para fumar hierba. La mayoría de nuestras pipas están sopladas a mano y vienen en colores y diseños especiales.
+                                                                </p>
+                                                                <a class="more" href="https://www.herbalist.ml/shop/pipas/" target="">Explorar colección</a></div>
+                                                        </div>
+
+                                                    <div class="shop-module">
                                                     <div class="shop-content">
                                                         <h2>Bongs</h2>
                                                         <div class="shop-image">
@@ -510,17 +525,8 @@
 
                                                         <a class="more" href="https://www.herbalist.ml/shop/bongs/" target="" >Explorar colección</a>
                                                     </div>
-                                                </div><div class="shop-module">
-                                                    <div class="shop-content">
-                                                        <h2>Pipas</h2>
-                                                        <div class="shop-image">
-                                                            <a href="https://www.herbalist.ml/shop/pipas/"><img src="https://www.herbalist.ml/img/icons/pipa-icon.jpg" alt="pipas" /></a>
-                                                        </div>
-                                                        <p>
-                                                            Las pipas de vidrio son la forma más práctica y rápida para fumar hierba. La mayoría de nuestras pipas están sopladas a mano y vienen en colores y diseños especiales.
-                                                        </p>
-                                                        <a class="more" href="https://www.herbalist.ml/shop/pipas/" target="">Explorar colección</a></div>
                                                 </div>
+                                                        
                                                     <div class="shop-module">
                                                         <div class="shop-content">
                                                             <h2>Vapes</h2>
@@ -532,7 +538,9 @@
                                                             </p>
                                                             <a class="more" href="https://www.herbalist.ml/shop/vapes/" target="">Explorar colección</a>
                                                         </div>
-                                                    </div><div class="shop-module">
+                                                    </div>
+
+                                                    <div class="shop-module">
                                                         <div class="shop-content">
                                                             <h2>Grinders</h2>
                                                             <div class="shop-image">
@@ -544,6 +552,8 @@
                                                             <a class="more" href="https://www.herbalist.ml/shop/picadoras/" target="">Explorar colección</a>
                                                         </div>
                                                     </div>
+
+
                                                 </div>
                                                 </div>
                                             </div>
