--- a/index.html
+++ b/index.html
@@ -497,8 +497,7 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_2  et_pb_text_align_left et_pb_bg_layout_light">
 
 
-                                                <div class="et_pb_text_inner">
-                                                    <div class="key-shop-list">
+                                                <div class="et_pb_text_inner"><div class="key-shop-list">
 
                                                     <div class="shop-module">
                                                     <div class="shop-content">
@@ -526,8 +525,6 @@
                                                         </p>
                                                         <a class="more" href="https://www.herbalist.ml/shop/pipas/" target="">Explorar colección</a></div>
                                                 </div>
-
-
                                                     <div class="shop-module">
                                                         <div class="shop-content">
                                                             <h2>Vapes</h2>
@@ -539,9 +536,7 @@
                                                             </p>
                                                             <a class="more" href="https://www.herbalist.ml/shop/vapes/" target="">Explorar colección</a>
                                                         </div>
-                                                    </div>
-
-                                                    <div class="shop-module">
+                                                    </div><div class="shop-module">
                                                         <div class="shop-content">
                                                             <h2>Grinders</h2>
                                                             <div class="shop-image">
@@ -553,8 +548,6 @@
                                                             <a class="more" href="https://www.herbalist.ml/shop/picadoras/" target="">Explorar colección</a>
                                                         </div>
                                                     </div>
-
-
                                                 </div>
                                                 </div>
                                             </div>
