--- a/index.html
+++ b/index.html
@@ -497,9 +497,7 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_2  et_pb_text_align_left et_pb_bg_layout_light">
 
 
-                                                <div class="et_pb_text_inner"><div class="key-shop-list">
-
-                                                    <div class="shop-module">
+                                                <div class="et_pb_text_inner"><div class="key-shop-list"><div class="shop-module">
                                                     <div class="shop-content">
                                                         <h2>Bongs</h2>
                                                         <div class="shop-image">
@@ -512,9 +510,7 @@
 
                                                         <a class="more" href="https://www.herbalist.ml/shop/bongs/" target="" >Explorar colección</a>
                                                     </div>
-                                                </div>
-
-                                                    <div class="shop-module">
+                                                </div><div class="shop-module">
                                                     <div class="shop-content">
                                                         <h2>Pipas</h2>
                                                         <div class="shop-image">
