--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
                                                     <div class="owl-carousel owl-theme"><div class="owl-slider item">
-                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/the-herbalist-stoner-box.jpg?v11');">
+                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/the-herbalist-stoner-box-compressed.jpg');">
                                                             <div class="slider-content et_pb_row">
 
                                                                 <h2 class="custom-slider-text">The Herbalist Box™ <br> for just $49.99</h2>
