--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
                                                                 <div class="item">
                                                                     <div class="product-img">
 
-                                                                        <img src="https://www.herbalist.ml/img/products/grinders/MARLEY-GRINDER-LARGE_New_800x800_8baee089-81fe-4a0f-a35c-107bf0779938_large.png?v=1610810676" alt="Elderberry 2:1 CBD + Indica" />
+                                                                        <img src="https://www.herbalist.ml/img/products/grinders/MARLEY-GRINDER-LARGE_New_800x800_8baee089-81fe-4a0f-a35c-107bf0779938_large.png?v=12" alt="Elderberry 2:1 CBD + Indica" />
                                                                         <div class="cat-name">$160.00</div>
 
                                                                     </div>
