--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
                                                                 <div class="item">
                                                                     <div class="product-img">
 
-                                                                        <img src="https://www.herbalist.ml/img/products/grinders/MARLEY-GRINDER-SMALL_1-default_large.png?v=1610678517" alt="Elderberry 2:1 CBD + Indica" />
+                                                                        <img src="https://www.herbalist.ml/img/products/grinders/MARLEY-GRINDER-SMALL_1-default_large.png?v=12" alt="Elderberry 2:1 CBD + Indica" />
                                                                         <div class="cat-name">$90.00</div>
 
                                                                     </div>
