--- a/index.html
+++ b/index.html
@@ -641,15 +641,18 @@
                                 </div>
 
 
-                                </div><div class="et_pb_row et_pb_row_4">
+                                </div>
+
+                                    <!--<div class="et_pb_row et_pb_row_4">
                                     <div class="et_pb_column et_pb_column_4_4 et_pb_column_5  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                         <div class="et_pb_module et_pb_text et_pb_text_8  et_pb_text_align_left et_pb_bg_layout_light">
                                             <div class="et_pb_text_inner"><h2>Explora la tienda</h2></div>
                                         </div>
                                     </div>
+                                </div>-->
 
 
-                                </div><div class="et_pb_row et_pb_row_5">
+                                    <!--<div class="et_pb_row et_pb_row_5">
                                     <div class="et_pb_column et_pb_column_4_4 et_pb_column_6  et_pb_css_mix_blend_mode_passthrough et-last-child">
 
 
@@ -670,7 +673,7 @@
 
                                                     <div class="et_pb_all_tabs">
 
-                                                        <!-- BONGS -->
+
                                                         <div class="et_pb_tab et_pb_tab_0 et_pb_active_content et-pb-active-slide">
                                                             <div class="owl-carousel owl-theme">
 
@@ -746,10 +749,10 @@
                                                             </div>
 
                                                         </div>
-                                                        <!-- BONGS -->
 
 
-                                                        <!-- PIPAS -->
+
+
                                                         <div class="et_pb_tab et_pb_tab_1">
                                                             <div class="owl-carousel owl-theme">
 
@@ -777,7 +780,6 @@
                                                                         </div>
                                                                     </div>
                                                                 </div>
-
 
                                                                 <div class="item">
                                                                     <div class="product-img">
@@ -827,10 +829,10 @@
                                                             </div>
 
                                                         </div>
-                                                        <!-- PIPAS -->
 
 
-                                                        <!-- VAPOS -->
+
+
                                                         <div class="et_pb_tab et_pb_tab_2">
                                                             <div class="owl-carousel owl-theme">
 
@@ -871,10 +873,6 @@
                                                                         </div>
                                                                     </div>
                                                                 </div>
-
-
-
-
 
                                                                 <div class="item">
                                                                     <div class="product-img">
@@ -931,10 +929,10 @@
                                                             </div>
 
                                                         </div>
-                                                        <!-- VAPOS -->
 
 
-                                                        <!-- BOLETAS -->
+
+
                                                         <div class="et_pb_tab et_pb_tab_3">
                                                             <div class="owl-carousel owl-theme">
 
@@ -1029,18 +1027,18 @@
 
                                                             </div>
 
-                                                            <!--<div class="et_pb_button_module_wrapper shop_link show-mobile">
+                                                            <div class="et_pb_button_module_wrapper shop_link show-mobile">
                                                                 <a class="btn btn--black" href="https://www.herbalist.ml/shop/">
                                                                     <span class="text">Explorar Smoke Shop</span>
                                                                     <span class="bg"></span>
                                                                 </a>
-                                                            </div>-->
+                                                            </div>
 
                                                         </div>
-                                                        <!-- BOLETAS -->
 
 
-                                                        <!-- GRINDERS -->
+
+
                                                         <div class="et_pb_tab et_pb_tab_4">
                                                             <div class="owl-carousel owl-theme">
 
@@ -1154,10 +1152,10 @@
                                                             </div>
 
                                                         </div>
-                                                        <!-- GRINDERS -->
 
 
-                                                        <!-- ESENCIALES -->
+
+
                                                         <div class="et_pb_tab et_pb_tab_5">
                                                             <div class="owl-carousel owl-theme">
 
@@ -1341,7 +1339,7 @@
                                                             </div>
 
                                                         </div>
-                                                        <!-- ESENCIALES -->
+
 
                                                     </div>
                                                     <script>
@@ -1378,7 +1376,9 @@
                                     </div>
 
 
-                                </div>
+                                </div>-->
+
+
 
 
                                 </div>
