--- a/index.html
+++ b/index.html
@@ -1565,6 +1565,11 @@
                                 <div class="et_pb_text_inner">
                                     <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/">Política de Privacidad</a>
                                 </div>
+
+                                <div class="et_pb_text_inner">
+                                    <a href="https://ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a>
+                                </div>
+
                             </div>
 
                         </div>
