--- a/index.html
+++ b/index.html
@@ -407,24 +407,15 @@
 
                                                 <div class="et_pb_text_inner"><div class="feature_slider" id="feature_slider">
                                                     <div class="owl-carousel owl-theme"><div class="owl-slider item">
-                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/the-herbalist-stoner-box-compressed.jpg');">
+                                                        <div class="feature-slider " style="background-image: url('https://www.herbalist.ml/img/herbalist_vape_banner.jpg?v2');">
                                                             <div class="slider-content et_pb_row">
 
-                                                                <h2 class="custom-slider-text">The Herbalist Box™ <br> for just $49.99</h2>
+                                                                <h2 class="custom-slider-text">Accesorios Premium</h2>
 
-
-                                                                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="paypal-form">
-                                                                    <input type="hidden" name="cmd" value="_s-xclick">
-                                                                    <input type="hidden" name="hosted_button_id" value="P9MY25EFSZS68">
-                                                                    <input type="image" src="https://www.paypalobjects.com/es_ES/ES/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal, la forma rápida y segura de pagar en Internet.">
-                                                                    <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
-                                                                </form>
-
-
-                                                                <!--<a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=I want The Herbalist Box!">
-                                                                      <span class="text">Get the box</span>
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                      <span class="text">Shop</span>
                                                                    <span class="bg"></span>
-                                                               </a>-->
+                                                               </a>
 
 
                                                            </div>
