--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
 
                                                                 <h2 class="custom-slider-text">Accesorios Premium</h2>
 
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
-                                                                      <span class="text">Shop</span>
+                                                                <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
+                                                                      <span class="text">Smoke Shop</span>
                                                                    <span class="bg"></span>
                                                                </a>
 
