--- a/shop/index.html
+++ b/shop/index.html
@@ -495,25 +495,23 @@ heateor_sss_vertical_sharing{
 
                                                 <div class="et_pb_text_inner"><div class="key-shop-list"><div class="shop-module">
                                                     <div class="shop-content">
-                                                        <h2>Bongs</h2>
-                                                        <div class="shop-image">
-                                                            <a href="https://www.herbalist.ml/shop/bongs/"><img src="https://www.herbalist.ml/img/icons/bong-icon.jpg" alt="bongs" /></a>
-                                                        </div>
-
-                                                        <p>
-                                                            En nuestra tienda encontrarás tu próximo bong o pipa! Tenemos muchos tipos de pipas y bongs a la venta.
-                                                        </p>
-
-                                                        <a class="more" href="https://www.herbalist.ml/shop/bongs/" target="" >Explorar colección</a>
-                                                    </div>
-                                                </div><div class="shop-module">
-                                                    <div class="shop-content">
                                                         <h2>Pipas</h2>
                                                         <div class="shop-image">
-                                                            <a href="https://www.herbalist.ml/shop/pipas/"><img src="https://www.herbalist.ml/img/icons/pipa-icon.jpg" alt="pipas" /></a>
+                                                            <a href="https://www.herbalist.ml/shop/pipas/"><img src="https://www.herbalist.ml/img/icons/pipa-icon.jpg" alt="pipas costa rica" /></a>
                                                         </div>
                                                         <p>
                                                             Las pipas de vidrio son la forma más práctica y rápida para fumar hierba. La mayoría de nuestras pipas están sopladas a mano y vienen en colores y diseños especiales.
+                                                        </p>
+                                                        <a class="more" href="https://www.herbalist.ml/shop/pipas/" target="" >Explorar colección</a>
+                                                    </div>
+                                                </div><div class="shop-module">
+                                                    <div class="shop-content">
+                                                        <h2>Bongs</h2>
+                                                        <div class="shop-image">
+                                                            <a href="https://www.herbalist.ml/shop/bongs/"><img src="https://www.herbalist.ml/img/icons/bong-icon.jpg" alt="bongs costa rica" /></a>
+                                                        </div>
+                                                        <p>
+                                                            En nuestra tienda encontrarás tu próximo bong o pipa! Tenemos muchos tipos de pipas y bongs a la venta.
                                                         </p>
                                                         <a class="more" href="https://www.herbalist.ml/shop/pipas/" target="">Explorar colección</a></div>
                                                 </div>
