--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -53,12 +53,12 @@
     </script>
  
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Herbalist Smoke Shop: Encuentra los mejores Bongs 💨</title>
+    <title>Herbalist Smoke Shop: Encuentra los mejores Bongs</title>
     <meta name="description" content="Compre nuestra amplia selección de bongs y pipas de vidrio a los mejores precios y diseñados con vidrio de silicona de la más alta calidad. Envío gratis a cualquier lugar de Costa Rica" />
     <link rel="canonical" href="https://www.herbalist.ml/shop/bongs/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Herbalist Smoke Shop: Encuentra los mejores Bongs 💨" />
+    <meta property="og:title" content="Herbalist Smoke Shop: Encuentra los mejores Bongs" />
     <meta property="og:description" content="Compre nuestra amplia selección de bongs y pipas de vidrio a los mejores precios y diseñados con vidrio de silicona de la más alta calidad. Envío gratis a cualquier lugar de Costa Rica" />
     <meta property="og:url" content="https://www.herbalist.ml/shop/bongs/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -132,7 +132,7 @@
                     <div class="et_pb_row et_pb_row_0_tb_header">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_module et_pb_text et_pb_text_0_tb_header et_clickable  et_pb_text_align_center et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p>ENVÍO GRATIS 24/7 🇨🇷</p></div>
+                                <div class="et_pb_text_inner"><p>Envíos gratis 🇨🇷</p></div>
                             </div>
                         </div>
                     </div>
