--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Herbalist Smoke Shop: Picadoras o Grinders al mejor precio 💨</title>
+    <title>Herbalist Smoke Shop: Picadoras o Grinders al mejor precio</title>
     <meta name="description" content="Tienda #1 en accesorios 420 para fumar con bongs, pipas de vidrio, vaporizadores, boletas y picadoras. Envío gratis y discreto a su puerta." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/picadoras/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Herbalist Smoke Shop: Picadoras o Grinders al mejor precio 💨" />
+    <meta property="og:title" content="Herbalist Smoke Shop: Picadoras o Grinders al mejor precio" />
     <meta property="og:description" content="Tienda #1 en accesorios 420 para fumar con bongs, pipas de vidrio, vaporizadores, boletas y picadoras. Envío gratis y discreto a su puerta." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/picadoras/" />
     <meta property="og:site_name" content="Herbalist" />
@@ -132,7 +132,7 @@
                     <div class="et_pb_row et_pb_row_0_tb_header">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_module et_pb_text et_pb_text_0_tb_header et_clickable  et_pb_text_align_center et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p>ENVÍO GRATIS 24/7 🇨🇷</p></div>
+                                <div class="et_pb_text_inner"><p>Envíos gratis 🇨🇷</p></div>
                             </div>
                         </div>
                     </div>
