--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                                                         <p>
                                                             En nuestra tienda encontrarás tu próximo bong o pipa! Tenemos muchos tipos de pipas y bongs a la venta.
                                                         </p>
-                                                        <a class="more" href="https://www.herbalist.ml/shop/pipas/" target="">Explorar colección</a></div>
+                                                        <a class="more" href="https://www.herbalist.ml/shop/bongs/" target="">Explorar colección</a></div>
                                                 </div>
                                                     <div class="shop-module">
                                                         <div class="shop-content">
