--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                                                             Las pipas de vidrio son la forma más práctica y rápida para fumar hierba. La mayoría de nuestras pipas están sopladas a mano y vienen en colores y diseños especiales.
                                                         </p>
 
-                                                        <a class="more" href="https://www.herbalist.ml/shop/bongs/" target="" >Explorar colección</a>
+                                                        <a class="more" href="https://www.herbalist.ml/shop/pipas/" target="" >Explorar colección</a>
                                                     </div>
                                                 </div><div class="shop-module">
                                                     <div class="shop-content">
