--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -301,12 +301,8 @@
                 <div class="et_pb_row et_pb_row_4_tb_header">
                     <div class="et_pb_column et_pb_column_4_4 et_pb_column_8_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
 
-                        <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
-                            <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/cbd/">CBD</a>
-                        </div>
-
-                        <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
-                            <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/cultivation/">Cultivo</a>
+                        <div class="et_pb_button_module_wrapper et_pb_button_9_tb_header_wrapper  et_pb_module ">
+                            <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/pipas/">Pipas</a>
                         </div>
 
                         <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
@@ -314,11 +310,19 @@
                         </div>
 
                         <div class="et_pb_button_module_wrapper et_pb_button_9_tb_header_wrapper  et_pb_module ">
-                            <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/pipas/">Pipas</a>
+                            <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/vapes/">Vapes</a>
                         </div>
 
                         <div class="et_pb_button_module_wrapper et_pb_button_9_tb_header_wrapper  et_pb_module ">
-                            <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/vapes/">Vapes</a>
+                            <a class="et_pb_button et_pb_button_9_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/shop/picadoras/">Grinders</a>
+                        </div>
+
+                        <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
+                            <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/cbd/">CBD</a>
+                        </div>
+
+                        <div class="et_pb_button_module_wrapper et_pb_button_8_tb_header_wrapper  et_pb_module ">
+                            <a class="et_pb_button et_pb_button_8_tb_header et_pb_bg_layout_light" href="https://www.herbalist.ml/cultivation/">Cultivo</a>
                         </div>
 
                         <div class="et_pb_button_module_wrapper et_pb_button_11_tb_header_wrapper  et_pb_module ">
