--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -360,7 +360,7 @@
         </div>
     </div>
     <!-- MENU MOBILE -->
-    
+
                 </div>
 
             </div>
@@ -447,6 +447,15 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner"><h1>Grinders</h1></div>
                                             </div>
+
+                                            <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
+                                                <div class="et_pb_text_inner">
+                                                    <h4>
+                                                        Los grinders se aseguran de que aproveches al máximo tu hierba, facilitan el enrolado y producen un humo más suave, ¡así que echa un vistazo a nuestra colección de las mejores marcas de grinder para hierba!
+                                                    </h4>
+                                                </div>
+                                            </div>
+
                                         </div>
                                     </div>
 
