--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -1051,7 +1051,7 @@
                                         <i class="fab fa-twitter sap-icon"></i>
                                     </a>
                                 </div>-->
-                                
+
                             </div>
                             <div class="et_pb_column et_pb_column_1_2 et_pb_column_5_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
 
@@ -1093,13 +1093,8 @@
                             </div>
 
                                 <div class="et_pb_module et_pb_text et_pb_text_11_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-                                    <div class="et_pb_text_inner"><p><a href="mailto:shop@herbalist.ml@herbalist.ml">shop@herbalist.ml</a></p>
+                                    <div class="et_pb_text_inner"><p><a href="mailto:shop@herbalist.ml">shop@herbalist.ml</a></p>
                                     </div>
-
-                                    <div class="custom-cards">
-                                        <img src="https://www.herbalist.ml/img/cards.png" alt="Tipos de pagos disnopibles" class="wp-image-16">
-                                    </div>
-
                                 </div>
 
                             </div>
