--- a/cultivation/index.html
+++ b/cultivation/index.html
@@ -768,7 +768,7 @@
                             </div>
 
                                 <div class="et_pb_module et_pb_text et_pb_text_11_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-                                    <div class="et_pb_text_inner"><p><a href="mailto:shop@herbalist.ml@herbalist.ml">shop@herbalist.ml</a></p>
+                                    <div class="et_pb_text_inner"><p><a href="mailto:shop@herbalist.ml">shop@herbalist.ml</a></p>
                                     </div>
 
                                     <div class="custom-cards">
