--- a/shop/index.html
+++ b/shop/index.html
@@ -589,13 +589,10 @@ heateor_sss_vertical_sharing{
 
             </div>
 
-            <!-- footer 1 -->
-            <footer class="et-l et-l--footer">
+              <!-- footer 1 -->
+              <footer class="et-l et-l--footer">
                 <div class="et_builder_inner_content et_pb_gutters3">
                     <div class="et_pb_section et_pb_section_1_tb_footer cus-animate-section et_section_regular" >
-
-
-
 
                         <div class="et_pb_row et_pb_row_0_tb_footer et_pb_row_fullwidth cus-animate-wrap">
                             <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
@@ -603,15 +600,9 @@ heateor_sss_vertical_sharing{
                                     <div class="et_pb_text_inner"><p>ACCESORIOS PARA FUMAR EN COSTA RICA• ACCESORIOS PARA FUMAR EN COSTA RICA• ACCESORIOS PARA FUMAR EN COSTA RICA• ACCESORIOS PARA FUMAR EN COSTA RICA• ACCESORIOS PARA FUMAR EN COSTA RICA• ACCESORIOS PARA FUMAR EN COSTA RICA• ACCESORIOS PARA FUMAR EN COSTA RICA• ACCESORIOS PARA FUMAR EN COSTA RICA• ACCESORIOS PARA FUMAR EN COSTA RICA•</p></div>
                                 </div>
                             </div>
-
-
                         </div>
 
-
                     </div><div class="et_pb_section et_pb_section_3_tb_footer et_section_regular" >
-
-
-
 
                     <div class="et_pb_row et_pb_row_1_tb_footer et_pb_gutters4">
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1_tb_footer  et_pb_css_mix_blend_mode_passthrough">
@@ -718,7 +709,7 @@ heateor_sss_vertical_sharing{
                             <div class="et_pb_module et_pb_text et_pb_text_6_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                 <div class="et_pb_text_inner">
                                     <p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.<hr></p>
-                                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> Tranquilino Sáenz Flores, Heredia Costa Rica.</p>
+<p><i class="fa fa-map-marker" aria-hidden="true"></i> Tranquilino Sáenz Flores, Heredia Costa Rica.</p>
 
 
                                 </div>
@@ -728,7 +719,7 @@ heateor_sss_vertical_sharing{
 
                             <div class="et_pb_module et_pb_text et_pb_text_7_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                 <div class="et_pb_text_inner">
-                                    <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/">Política de Privacidad</a>
+                                    <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/">Política de Privacidad</a> <a href="https://ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a>
                                 </div>
                             </div>
 
