--- a/shop/index.html
+++ b/shop/index.html
@@ -719,7 +719,7 @@ heateor_sss_vertical_sharing{
 
                             <div class="et_pb_module et_pb_text et_pb_text_7_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                 <div class="et_pb_text_inner">
-                                    <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/">Política de Privacidad</a> <a href="https://ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a>
+                                    <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/">Política de Privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a>
                                 </div>
                             </div>
 
