--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -1282,7 +1282,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
                         </div>
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_5_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_module et_pb_text et_pb_text_6_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p>© 2022 Herbalist® Smoke Shop. Todos los derechos reservados.</p></div>
+                                <div class="et_pb_text_inner"><p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.</p></div>
                             </div>
 
                             <div class="et_pb_module et_pb_text et_pb_text_7_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
