--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -1301,17 +1301,15 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
 
 
                             <div class="et_pb_module et_pb_text et_pb_text_9_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-
-
                                 <div class="et_pb_text_inner">
                                     <p><a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a> </p>
                                 </div>
-
                             </div>
+
                             <div class="et_pb_module et_pb_text et_pb_text_10_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-
-
-                            <div class="et_pb_text_inner"><p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.</p></div>
+                            <div class="et_pb_text_inner">
+                                <p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.</p>
+                            </div>
                         </div>
 
                             <div class="et_pb_module et_pb_text et_pb_text_11_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
