--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -1302,7 +1302,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
 
                             <div class="et_pb_module et_pb_text et_pb_text_9_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                 <div class="et_pb_text_inner">
-                                    <p><a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a> </p>
+                                    <p><a href="mailto:shop@herbalist.ml">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a> </p>
                                 </div>
                             </div>
 
@@ -1312,10 +1312,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
                             </div>
                         </div>
 
-                            <div class="et_pb_module et_pb_text et_pb_text_11_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p><a href="mailto:shop@herbalist.ml">shop@herbalist.ml</a></p>
-                                </div>
-                            </div>
+                        
 
                         </div>
 
