--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -1305,6 +1305,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
                             <div class="et_pb_text_inner">
                                 <p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.</p>
                                 <hr>
+                                <p><i class="fa fa-map-marker" aria-hidden="true"></i> Tranquilino Sáenz Flores, Heredia Costa Rica.</p>
                             </div>
                             </div>
                         
