--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -1303,8 +1303,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
 
                             <div class="et_pb_module et_pb_text et_pb_text_10_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                             <div class="et_pb_text_inner">
-                                <p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.</p>
-                                <hr>
+                                <p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.<hr></p>
                                 <p><i class="fa fa-map-marker" aria-hidden="true"></i> Tranquilino Sáenz Flores, Heredia Costa Rica.</p>
                             </div>
                             </div>
