--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -1290,7 +1290,7 @@ Apisonadora Marley Natural Rise Up</a>&nbsp;</span>- Disfrutará golpeando con e
 
                             <div class="et_pb_module et_pb_text et_pb_text_7_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                 <div class="et_pb_text_inner">
-                                    <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de Privacidad</a>
+                                    <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de Privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a>
                                 </div>
                             </div>
                         </div>
