--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -633,8 +633,8 @@
 
             </div>
 
-           <!-- FOOTER #2 -->
-           <footer class="et-l et-l--footer">
+              <!-- FOOTER #2 -->
+          <footer class="et-l et-l--footer">
             <div class="et_builder_inner_content et_pb_gutters3">
                 <div class="et_pb_section et_pb_section_1_tb_footer cus-animate-section et_section_regular" >
 
@@ -737,25 +737,20 @@
                             </div>-->
 
                         </div>
+
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_5_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
-
-
-                            <div class="et_pb_module et_pb_text et_pb_text_5_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-
-
-                                <div class="et_pb_text_inner"><p><a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de privacidad</a></p></div>
-                            </div>
                             <div class="et_pb_module et_pb_text et_pb_text_6_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-
-                                <div class="et_pb_text_inner"><p>© 2022 Herbalist® Smoke Shop. Todos los derechos reservados.</p></div>
+                                <div class="et_pb_text_inner"><p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.<hr></p>
+                                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> Tranquilino Sáenz Flores, Heredia Costa Rica.</p>
+                                </div>
                             </div>
+
                             <div class="et_pb_module et_pb_text et_pb_text_7_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
                                 <div class="et_pb_text_inner">
-                                    <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de Privacidad</a>
+                                    <a href="mailto:shop@herbalist.ml" target="_blank">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de Privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a>
                                 </div>
                             </div>
                         </div>
-
 
                     </div>
 
@@ -765,25 +760,20 @@
                     <div class="et_pb_row et_pb_row_4_tb_footer foot-icons">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_8_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
 
-
+                            <div class="et_pb_module et_pb_text et_pb_text_10_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
+                            <div class="et_pb_text_inner">
+                                <p>© 2022 Herbalist® Smoke Shop | Todos los Derechos Reservados.<hr></p>
+                                <p><i class="fa fa-map-marker" aria-hidden="true"></i> Tranquilino Sáenz Flores, Heredia Costa Rica.</p>
+                            </div>
+                            </div>
+                        
                             <div class="et_pb_module et_pb_text et_pb_text_9_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-
-
-                                <div class="et_pb_text_inner"><p><a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de privacidad</a></p></div>
-                            </div><div class="et_pb_module et_pb_text et_pb_text_10_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-
-
-                            <div class="et_pb_text_inner"><p>© 2022 Herbalist® Smoke Shop.</p></div>
-                        </div>
-
-                            <div class="et_pb_module et_pb_text et_pb_text_11_tb_footer inline-block  et_pb_text_align_left et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p><a href="mailto:shop@herbalist.ml">shop@herbalist.ml</a></p>
+                                <div class="et_pb_text_inner">
+                                    <p><a href="mailto:shop@herbalist.ml">shop@herbalist.ml</a> <a href="https://www.herbalist.ml/privacy-policy/" target="_blank">Política de privacidad</a> <a href="https://www.ripen.ga/" target="_blank">Powered by <b>RIPEN</b> </a> </p>
                                 </div>
                             </div>
 
                         </div>
-
-
                     </div>
 
 
