--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -475,7 +475,12 @@
 
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$18.20</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="paypal-pink-mod-bong"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
