--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -476,7 +476,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$18.20</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=shop">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
