--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -476,7 +476,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$18.20</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=shop">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -501,7 +501,12 @@
 
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$19.20</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="paypal-mod-bong-7in"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
