--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -529,7 +529,12 @@
                                                         <h2 class="et_pb_module_header"><span>Blue Spoon Glass Pipe</span></h2>
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$17.99</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="paypal-multi-colored-perc-bong"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
                                                     </div>
                                                 </div>
