--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -473,7 +473,12 @@
 
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$45.20</strong></p>
-                                                            <p class="custom-btn-comprar"> <div id="paypal-pink-mod-bong"></div> </p>
+                                                            <p class="custom-btn-comprar">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50662609063/?text=">
+                                                                    <span class="text">Comprar</span>
+                                                                    <span class="bg"></span>
+                                                                </a>
+                                                            </p>
                                                         </div>
 
                                                     </div>
